implement `entrypoint.sh`